jenkins/nfs-admin.yaml
# Create a nfs mounted admin 
---
apiVersion: v1
kind: Pod
metadata:
  name: nfs-admin
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 1000
  volumes:
  - name: nfs-data
    nfs: 
      server: truenas.ramvarra.com
      path: /mnt/kubedata-01/KUBEDATA-01
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep", "infinity"]
    resources:
      limits:
        memory: "256Mi"
        cpu: "500m"
    volumeMounts:
      - name: nfs-data
        mountPath: /mnt/data
